<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/compartir"
        android:icon="@mipmap/share"
        android:title="@string/compartir"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/Buscar"
        android:icon="@drawable/buscar"
        android:title="@string/buscar"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item1"
        android:title="@string/opcion1" />
    <item
        android:id="@+id/item2"
        android:title="@string/opcion2" />
    <item
        android:id="@+id/item3"
        android:title="@string/opcion3" />
    <item
        android:id="@+id/goBack"
        android:icon="@mipmap/anterior"
        android:title="Item"
        app:showAsAction="always" />
</menu>