<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="335dp"
        android:layout_height="351dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602">

        <TextView
            android:id="@+id/userNameProfileHead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/holtwood_one_sc"
            android:labelFor="@id/usuarioRegistro"
            android:text="@string/usuario_nombre"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/usuarioRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/holtwood_one_sc"
            android:hint="@string/usuario_hint"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColorHint="#757575"
            android:textSize="15sp"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@android:color/transparent" />

        <TextView
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/holtwood_one_sc"
            android:labelFor="@id/registerPass"
            android:text="@string/contraseña"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/registerPass"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/holtwood_one_sc"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHint="#757575"
            android:textSize="15sp"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/userPassword2"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:fontFamily="@font/holtwood_one_sc"
            android:labelFor="@id/registerPass"
            android:text="@string/repetir_contraseña"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/holtwood_one_sc"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHint="#757575"
            android:textSize="15sp"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="138dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.974">

        <ImageView
            android:id="@+id/nextButtonRegister"
            android:layout_width="128dp"
            android:layout_height="90dp"
            android:contentDescription="@string/nuevo_registro"
            android:onClick="newUser"
            app:srcCompat="@mipmap/pausa" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="350dp"
        android:layout_height="105dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084">

        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="218dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/holtwood_one_sc"
            android:text="@string/nuevo_registro"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="106dp"
            android:layout_height="106dp">

            <ImageView
                android:id="@+id/imageLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@mipmap/registro" />
        </FrameLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/passWordCheck"
        android:layout_width="125dp"
        android:layout_height="37dp"
        android:fontFamily="@font/holtwood_one_sc"
        android:text="@string/contraseñas_diferentes"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935" />
</androidx.constraintlayout.widget.ConstraintLayout>