<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ChangePasswordActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="335dp"
        android:layout_height="396dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <TextView
            android:id="@+id/userNameProfileHead"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:fontFamily="@font/holtwood_one_sc"
            android:labelFor="@id/usuarioRegistro"
            android:text="@string/usuario_nombre"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:fontFamily="@font/holtwood_one_sc"
            android:textAlignment="center"
            android:textColor="@color/purple_500"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/holtwood_one_sc"
            android:labelFor="@id/registerPass"
            android:text="@string/current_password"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/currentPassword"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/holtwood_one_sc"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHint="#757575"
            android:textSize="15sp"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/userPassword2"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:fontFamily="@font/holtwood_one_sc"
            android:labelFor="@id/registerPass"
            android:text="@string/new_password"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/holtwood_one_sc"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHint="#757575"
            android:textSize="15sp"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/userPassword3"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:fontFamily="@font/holtwood_one_sc"
            android:labelFor="@id/registerPass"
            android:text="@string/repeat_new_password"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextTextPassword3"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/holtwood_one_sc"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHint="#757575"
            android:textSize="15sp"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="364dp"
        android:layout_height="105dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025">

        <TextView
            android:id="@+id/changePasswordTitle"
            android:layout_width="246dp"
            android:layout_height="match_parent"
            android:fontFamily="@font/holtwood_one_sc"
            android:text="@string/change_password"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="106dp"
            android:layout_height="106dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/clave" />
        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout6"
        android:layout_width="118dp"
        android:layout_height="86dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961">

        <ImageView
            android:id="@+id/cambiarContraseñaButton"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/change_password"
            android:onClick="checkOldPass"
            app:srcCompat="@mipmap/pausa" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="95dp"
        android:layout_height="56dp"
        android:fontFamily="@font/holtwood_one_sc"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901" />

</androidx.constraintlayout.widget.ConstraintLayout>