<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="239dp"
        android:layout_height="457dp"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/holtwood_one_sc"
            android:text="@string/iniciar_sesion"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <ImageView
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:contentDescription="@string/iniciar_sesion"
            android:onClick="goToLogin"
            app:srcCompat="@mipmap/login" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="33dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/holtwood_one_sc"
            android:text="@string/registrarse"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <ImageView
            android:id="@+id/register_button"
            android:layout_width="278dp"
            android:layout_height="139dp"
            android:contentDescription="@string/registrarse"
            android:onClick="goToRegister"
            app:srcCompat="@mipmap/registro" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="352dp"
        android:layout_height="105dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084">

        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/holtwood_one_sc"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="31sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="106dp"
            android:layout_height="106dp">

            <ImageView
                android:id="@+id/imageLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@mipmap/ic_launcher_round" />
        </FrameLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="113dp"
        android:layout_height="56dp"
        android:contentDescription="@string/app_name"
        android:onClick="AudioSoundPool"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195"
        app:srcCompat="@mipmap/nota" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="113dp"
        android:layout_height="56dp"
        android:contentDescription="@string/app_name"
        android:onClick="AudioSoundPool"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195"
        app:srcCompat="@mipmap/nota" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="113dp"
        android:layout_height="56dp"
        android:contentDescription="@string/app_name"
        android:onClick="AudioMediaPlayer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195"
        app:srcCompat="@mipmap/nota" />

</androidx.constraintlayout.widget.ConstraintLayout>